--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -4,7 +4,8 @@ on:
     # !Please set a different minute than 51 if you enable this!
     # schedule:
     #     - cron: "51 */6 * * *" # Every 6 hours
-    workflow_dispatch:
+    # workflow_dispatch:
+    push
 
 jobs:
     update-readme:
